# prayerTimes

./: CHANGELOG.md  LICENSE  cabal.project  cross-build.sh  prayerTimes.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan
dist-windows/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  source-hashes  up-to-date
