cabal-version:      3.0

name:               prayerTimes

version:            0.1.0.0

synopsis:

description:

license:            MIT

license-file:       LICENSE

author:             Steven Santos

maintainer:         programmerstevie@gmail.com

category:           Data
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable prayerTimes
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.16 && <4.18,
                      http-conduit,
                      bytestring,
                      aeson,
                      time,
                      network-uri
    hs-source-dirs:   app
    default-language: GHC2021
